--- a/index.html
+++ b/index.html
@@ -9,38 +9,32 @@
 
 <body>
 
-    <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="products.html">Products</a></li>
-      </ul>
+  <header>
+    <nav class="navigation-bar">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
     </nav>
   </header>
 
   <main>
-    <section>
-      <h1>About Us</h1>
-      <p>  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="products.html">Products</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section>
-      <h1>Welcome to Simply Scented by CK</h1>
+    <section class="welcome-section">
+      <h1>Welcome to Simply Scent by CK</h1>
       <p>Welcome to our website! We are dedicated to providing you with the best products and services. Our team is passionate about delivering quality and ensuring customer satisfaction. Thank you for visiting us!</p>
     </section>
   </main>
 
-  <footer></footer>
-  
+  <section class="contact-card">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:ingeniousbyck@gmail.com">ingeniousbyck@gmail.com</a></p>
+    <p>Phone: +254 717 327 225</p>
+    <p>WhatsApp: <a href="https://wa.me/254717327225">+254 717 327 225</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/simplyscent_byck">Simply Scent by CK</a></p>
+    <p>TikTok: <a href="https://www.tiktok.com/@simplyscent_byck">Simply Scent by CK</a></p>
+  </section>
+
+  <footer>Simply Scent by CK</footer>
+
   <script src="script.js"></script>  
 </body>
 </html>
